# bazar_market_back_django

./: .dockerignore  .env-example  .gitignore  ADMIN_API_GUIDE.md  CUSTOMER_API_GUIDE.md  Dockerfile  FILE_SERVICE_GUIDE.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  manage.py  postman_collection.json  pyproject.toml  requirements.txt  test_all_endpoints.py
.github/workflows/: build-printer-agent.yml
admins/: urls.py
admins/dto/: auth.py  banner.py  category.py  coupon.py  customer.py  delivery_zone.py  discount.py  notification.py  payment.py  product.py  review.py  setting.py  user.py
base/: apps.py  container.py  discount_calculator.py  exceptions.py  models.py  openapi.json  permissions.py  ratelimit.py  responses.py  sms.py
base/interfaces/: __init__.py  address.py  analytics.py  banner.py  base.py  cart.py  category.py  coupon.py  delivery.py  discount.py  favorite.py  notification.py  order.py  payment.py  permission.py  product.py  product_image.py  referral.py  review.py  session.py  setting.py  user.py
base/middlewares/: responseTimeMiddleware.py  (+1 more)
bazar_market_django/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
bot/: bot_instance.py  keyboards.py  middleware.py  notify.py  states.py  tasks.py  texts.py  utils.py
customer/: urls.py
file_downloader/: .env-example  .gitignore  Dockerfile  main.py  pyproject.toml
nginx/: nginx.conf
print_agent/: README.md  agent.py  agent.spec  build.bat  build.sh  config.example.json  requirements.txt
(+122 files in other folders)
